--- a/CancerGov/_src/StyleSheets/_nav.scss
+++ b/CancerGov/_src/StyleSheets/_nav.scss
@@ -292,6 +292,7 @@
 		line-height: 1.6;
 		min-height: 1.5em;
 		padding: 0.75em 2.5em 0.75em 0.75em;
+		top: 0;
 		right: 5%;
 		background: #1c5e86 95% 50% no-repeat;
 		font-family: $montserrat-font-stack;
